Use DCI mirror host as container image source

--- a/installer/step2-install-undercloud/osp13/tasks.yaml
+++ b/installer/step2-install-undercloud/osp13/tasks.yaml
@@ -155,6 +155,14 @@
     value: "{{ undercloud_local_ip | ipaddr('network/prefix') | ipaddr('100') | ipaddr('address') }},\
       {{ undercloud_local_ip | ipaddr('network/prefix') | ipaddr('-2') | ipaddr('address') }}"
 
+- name: Set docker insecure registry for DCI host
+  ini_file:
+    path: /home/stack/undercloud.conf
+    section: DEFAULT
+    option: docker_insecure_registries
+    value: "{{ dci_base_ip }}:5000"
+  when: dci_base_ip is defined
+
 - name: Set undercloud admin password
   ini_file:
     path: /home/stack/undercloud.conf
