Ensure NetworkManager is disabled as well as stopped

--- a/installer/step2-install-undercloud/osp10/tasks.yaml
+++ b/installer/step2-install-undercloud/osp10/tasks.yaml
@@ -220,6 +220,7 @@
   systemd:
     state: stopped
     name: NetworkManager
+    enabled: no
   become: true
 
 - name: Add fake floating ip network gateway
