Ensure we install expect before trying to use it

--- a/installer/step4-update-undercloud-and-overcloud/osp10/tasks.yaml
+++ b/installer/step4-update-undercloud-and-overcloud/osp10/tasks.yaml
@@ -65,6 +65,12 @@
         -e /home/stack/environments/networking-cisco-config.yaml \
         --ntp-server 1.ntp.esl.cisco.com
 
+- name: Install expect package
+  yum:
+    name: expect
+    state: latest
+  become: true
+
 - name: Perform a package update on all overcloud nodes
   shell: |
     set timeout -1
