--- a/installer/step3-install-overcloud.yaml
+++ b/installer/step3-install-overcloud.yaml
@@ -13,7 +13,7 @@
     - name: Delete stack that already exists
       shell: |
         source /home/stack/stackrc
-        openstack stack delete --wait -y overcloud
+        openstack stack delete --wait --yes overcloud
       when: default_subnet_has_name is not failed
 
 - hosts: director
