Switch to using os-net-config to setup all the network interfaces

--- a/installer/step2-install-undercloud/osp10/tasks.yaml
+++ b/installer/step2-install-undercloud/osp10/tasks.yaml
@@ -148,7 +148,6 @@
     option: dhcp_end
     value: "{{ undercloud_local_ip | ipaddr('network/prefix') | ipaddr('99') | ipaddr('address') }}"
 
-
 - name: Set inspection ip range in undercloud.conf
   ini_file:
     path: /home/stack/undercloud.conf
@@ -163,6 +162,68 @@
     section: auth
     option: undercloud_admin_password
     value: password
+
+# Based on https://github.com/openstack/instack-undercloud/blob/newton-eol/templates/net-config.json.template
+# adds Cisco environment specific interfaces that need configuring
+- name: Write out the undercloud net config override
+  copy:
+    dest: /home/stack/undercloud_net_config.json.template
+    content: |
+      {% raw -%}
+      "network_config": [
+         {
+          "type": "ovs_bridge",
+          "name": "br-ctlplane",
+          "ovs_extra": [
+           "br-set-external-id br-ctlplane bridge-id br-ctlplane"
+          ],
+          "members": [
+           {
+            "type": "interface",
+            "name": "{{LOCAL_INTERFACE}}",
+            "primary": "true",
+            "mtu": {{LOCAL_MTU}},
+      {% endraw %}
+            "hwaddr": "{{ ansible_facts['pxe_int']['macaddress'] }}"
+           }
+      {% raw %}
+          ],
+          "addresses": [
+            {
+              "ip_netmask": "{{PUBLIC_INTERFACE_IP}}"
+            }
+          ],
+          "mtu": {{LOCAL_MTU}}
+        },
+      {% endraw %}
+        {
+          "type": "interface",
+          "name": "usernet",
+          "hwaddr": "{{ ansible_facts['usernet']['macaddress'] }}",
+          "addresses": [
+            {
+              "ip_netmask": "{{ overcloud_director_ip }}"
+            }
+          ]
+        },
+        {
+          "type": "interface",
+          "name": "{{ undercloud_fake_gw_interface }}",
+          "hwaddr": "{{ ansible_facts[(undercloud_fake_gw_interface | replace('-', '_'))]['macaddress'] }}",
+          "addresses": [
+            {
+              "ip_netmask": "{{ undercloud_fake_gw_cidr }}"
+            }
+          ]
+        }
+      ]
+
+- name: Set net config override in undercloud config
+  ini_file:
+    path: /home/stack/undercloud.conf
+    section: DEFAULT
+    option: net_config_override
+    value: "/home/stack/undercloud_net_config.json.template"
 
 - name: Run the undercloud installation
   shell: openstack undercloud install
@@ -212,49 +273,3 @@
     source /home/stack/stackrc
     openstack subnet set --dns-nameserver {{ dns_server_1 }} default-subnet
   when: default_subnet_has_name is failed
-
-# Non-standard Cisco additions to the installer process from here on:
-
-# Cisco specific addition for fake floating ip address gateway
-- name: Make sure NetworkManager is not running
-  systemd:
-    state: stopped
-    name: NetworkManager
-    enabled: no
-  become: true
-
-- name: Add fake floating ip network gateway
-  shell: >
-    ip addr | grep -q {{ undercloud_fake_gw_cidr }} ||
-    ip addr add {{ undercloud_fake_gw_cidr }} dev {{ undercloud_fake_gw_interface }}
-  become: true
-
-- name: Add IP in overcloud routable network
-  shell: >
-    ip addr | grep -q {{ overcloud_director_ip }} ||
-    ip addr add {{ overcloud_director_ip }} dev usernet
-  become: true
-
-- name: Write out network config for usernet interface
-  copy:
-    dest: /etc/sysconfig/network-scripts/ifcfg-usernet
-    content: |
-      DEVICE=usernet
-      TYPE=Ethernet
-      ONBOOT=yes
-      BOOTPROTO=none
-      PREFIX={{ overcloud_director_ip | ipaddr('prefix') }}
-      IPADDR={{ overcloud_director_ip | ipaddr('address') }}
-  become: true
-
-- name: Write out network config for fake floating IP net interface
-  copy:
-    dest: /etc/sysconfig/network-scripts/ifcfg-{{ undercloud_fake_gw_interface }}
-    content: |
-      DEVICE={{ undercloud_fake_gw_interface }}
-      TYPE=Ethernet
-      ONBOOT=yes
-      BOOTPROTO=none
-      PREFIX={{ undercloud_fake_gw_cidr | ipaddr('prefix') }}
-      IPADDR={{ undercloud_fake_gw_cidr | ipaddr('address') }}
-  become: true
