Fix all the linters errors so the checking all the things works

--- a/installer/step2-install-undercloud.yaml
+++ b/installer/step2-install-undercloud.yaml
@@ -49,4 +49,5 @@
   vars:
     ansible_user: stack
   tasks:
-  - include_tasks: "step2-install-undercloud/{{ dci_topic | lower }}/tasks.yaml"
+    - name: Include tasks for OSP version
+      include_tasks: "step2-install-undercloud/{{ dci_topic | lower }}/tasks.yaml"
