--- a/installer/step3-install-overcloud.yaml
+++ b/installer/step3-install-overcloud.yaml
@@ -20,4 +20,5 @@
   vars:
     ansible_user: stack
   tasks:
-  - include_tasks: "step3-install-overcloud/{{ dci_topic | lower }}/tasks.yaml"
+    - name: Include tasks for OSP version
+      include_tasks: "step3-install-overcloud/{{ dci_topic | lower }}/tasks.yaml"
