--- a/installer/step4-update-undercloud-and-overcloud.yaml
+++ b/installer/step4-update-undercloud-and-overcloud.yaml
@@ -3,4 +3,5 @@
   vars:
     ansible_user: stack
   tasks:
-  - include_tasks: "step4-update-undercloud-and-overcloud/{{ dci_topic | lower }}/tasks.yaml"
+    - name: Include tasks for OSP version
+      include_tasks: "step4-update-undercloud-and-overcloud/{{ dci_topic | lower }}/tasks.yaml"
