Ensure we with_items for compute nodes reboot script

--- a/installer/step4-update-undercloud-and-overcloud/osp10/tasks.yaml
+++ b/installer/step4-update-undercloud-and-overcloud/osp10/tasks.yaml
@@ -189,3 +189,4 @@
 
     source /home/stack/overcloudrc
     openstack compute service set {{ item.Name }}.localdomain nova-compute --enable
+  with_items: "{{ compute_nodes }}"
